# tinyrenderer_tutorial

./: .gitmodules  CMakeLists.txt  README.md
dependencies/: CMakeLists.txt
src/: geometry.h  helloworld.cpp  image.cpp  image.h  line.cpp  line.h  linedrawing.cpp  model.cpp  model.h  modeldraw.cpp  triangle.cpp  triangle.h  tridraw.cpp
