
option (PIXELTOASTER_TINY   "Disable use of STL and CRT libraries." YES)
option (PIXELTOASTER_NO_STL "Disable use of STL library." YES)
option (PIXELTOASTER_NO_CRT "Disable use of CRT library." YES)
option (PIXELTOASTER_USE_SSE2 "Enable use of SSE2." YES)
option (ENABLE_EXAMPLES   "Enable examples." NO)
add_subdirectory(pixeltoaster)
